syntax = "proto3";
package euc_backend;

import "google/protobuf/timestamp.proto";
import "enumps.proto";

message GetPaymentSessionConditionRequest {
  optional int32 id = 1;
  optional string name =2;
  optional EnumProto.SessionStatus status = 3;
  optional google.protobuf.Timestamp date_confirm = 4;
  optional google.protobuf.Timestamp date_done = 5;
  // google.protobuf.Timestamp created_at = 6;
  // google.protobuf.Timestamp updated_at = 7;
  // optional google.protobuf.Timestamp deleted_at = 8;
  optional int32 page =10;
  optional int32 limit =11;
  optional bool is_deleted =13;
  optional bool is_extra_user_confirm =15;
  optional bool is_extra_user_done =16;
  optional bool is_extra_event =17;
  optional bool is_extra_payment =18;
}

message CreatePaymentSessionRequest {
  string name =2;
  EnumProto.SessionStatus status = 3;
}

message UpdatePaymentSessionDataRequest {
  optional string name =2;
  optional EnumProto.SessionStatus status = 3;
}

message UpdatePaymentSessionRequest {
  GetPaymentSessionConditionRequest conditions =1;
  UpdatePaymentSessionDataRequest data =2;
}

message RemovePaymentSessionRequest {
  int32 id = 1;
}
